--- a/frontend/src/components/RepositoryCard/RepositoryCard.scss
+++ b/frontend/src/components/RepositoryCard/RepositoryCard.scss
@@ -1,4 +1,5 @@
-@import "../../styles/variables";
+@use "../../styles/variables" as *;
+@use "sass:color";
 
 .repository-card {
   background: $bg-primary;
@@ -225,7 +226,7 @@
 
 .btn--secondary {
   background: $primary-light;
-  border-color: lighten($primary-color, 30%);
+  border-color: color.scale($primary-color, $lightness: 30%);
 
   &:hover:not(:disabled) {
     background: $primary-light-hover;
